Route_table_association_with_public_subnets.tf
resource "aws_route_table_association" "a" {

  subnet_id      = aws_subnet.subnet_a.id

  route_table_id = aws_route_table.public_rt.id

}

resource "aws_route_table_association" "b" {

  subnet_id      = aws_subnet.subnet_b.id

  route_table_id = aws_route_table.public_rt.id

}

resource "aws_route_table_association" "c" {

  subnet_id      = aws_subnet.subnet_c.id

  route_table_id = aws_route_table.public_rt.id

}
