routetable.tf
resource "aws_route_table" "public_rt" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main-igw.id

  }

  tags = {

    Name = "capstone_public_rt"

  }

}
